--- a/servizi.html
+++ b/servizi.html
@@ -52,7 +52,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav mr-auto">
                           <li class="nav-item">
-                              <a href="novastefano.html" class="nav-link">Home</a>
+                              <a href="home.html" class="nav-link">Home</a>
                           </li>
                           <li class="nav-item">
                               <a href="servizi.html" class="nav-link">Servizi</a>
