--- a/home.html
+++ b/home.html
@@ -47,12 +47,12 @@
                       <span class="navbar-toggler-icon"></span>
                   </button>
                   <a class="navbar-brand">
-                      <strong>LOGO</strong>
+                     <h1> <strong>SN</strong></h1>
                   </a>
                   <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav mr-auto">
                           <li class="nav-item">
-                              <a href="novastefano.html" class="nav-link">Home</a>
+                              <a href="home.html" class="nav-link">Home</a>
                           </li>
                           <li class="nav-item">
                               <a href="servizi.html" class="nav-link">Servizi</a>
