--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
                       <span class="navbar-toggler-icon"></span>
                   </button>
                   <a class="navbar-brand">
-                     <h1> <strong>SN</strong></h1>
+                      <img style="width: 30px;" src="http://www.novastefano.it/Immagini/logo.png">
                   </a>
                   <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav mr-auto">
