--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
               }
 
               .top-nav-collapse {
-                  background-color: #4285F4;
+                  background-color:deepskyblue;
               }
 
               @media only screen and (max-width: 768px) {
@@ -136,7 +136,7 @@
                           </div>
                       </div>
                       <br>
-                      <div class="stylish-separator" style="border-top: 1px solid #F0F3F4"></div>
+                      <div class="stylish-separator" style="border-top: 1px solid dodgerblue"></div>
                       <br>
                       <div class="row">
                       <div class="col-md-6">
@@ -170,7 +170,7 @@
           </div>
       </header>
 
-      <footer class="page-footer blue center-on-small-only" style="margin-top: 0% !important;">
+      <footer class="page-footer blue center-on-small-only" style="margin-top: 0% !important;" >
           <div class="container-fluid">
               <div class="row">
                   <div class="col-md-12">
